// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary component correctly multiple expense 1`] = `
<div>
  <h2>
    Viewing 34 expenses totalling $94.34
  </h2>
</div>
`;

exports[`Should render ExpensesSummary component correctly single expense 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $94.34
  </h2>
</div>
`;
